fixed project section spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -353,7 +353,7 @@ pre code {
   margin: 0 auto;
   padding: 0 10px;
   position: relative;
-  height: 300px;
+  height: 400px;
 }
 
 .project-description{
